# video-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  gemini-code-1781607894946.json  llms.txt  production_roadmap.md  prompts.txt  pyproject.toml  render.yaml  requirements.txt  server.json  server.py  submission_document.md  submit_job.py  walkthrough.md
.github/workflows/: ci.yml  deploy.yml  publish.yml
docs/: README.md  api_reference.md  architecture.md  caching.md  cli_troubleshooting.md  client_configuration.md  faq.md  providers.md  quickstart.md
tests/: conftest.py  test_assemble.py  test_cache.py  test_cli.py  test_generate.py  test_guardrails.py  test_security.py  test_server.py
video_mcp/: __init__.py  cache.py  cli.py  client.py  config.py  errors.py  guardrails.py  jobs.py  server.py
video_mcp/models/: __init__.py  results.py  schemas.py
video_mcp/providers/: __init__.py  base.py  elevenlabs.py  hailuo.py  kling.py  veo.py
video_mcp/tools/: __init__.py  analyze.py  assemble.py  audio.py  character.py  discovery.py  edit.py  generate.py
