[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-mcp"
version = "0.1.0"
description = "AI-native video generation MCP server — Kling, Veo, ElevenLabs and more"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yash Sharma" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "fastmcp>=0.5.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.0",
    "structlog>=24.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
ffmpeg = ["ffmpeg-python"]
transcribe = ["openai-whisper"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "bandit>=1.7",
]

[project.scripts]
video-mcp = "video_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["video_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL"]
ignore = ["S101", "S104", "PLR2004", "S311", "PLR0913", "PLR0915"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "fastmcp.*",
    "tenacity.*",
    "structlog.*",
    "ffmpeg.*",
    "whisper.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
